add "override_if_empty=false" for empty result to outputlookup

--- a/covid19-japan/default/savedsearches.conf
+++ b/covid19-japan/default/savedsearches.conf
@@ -49,7 +49,7 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| streamstats current=true allnum=true global=false reset_on_change=true sum(daily_confirmed) as cumulativeConfirmed by name\
 	| addinfo\
 	\
-	| outputlookup output_format=splunk_mv_csv covid19japan_confirmed_by_prefecture_summary.csv
+	| outputlookup output_format=splunk_mv_csv override_if_empty=false covid19japan_confirmed_by_prefecture_summary.csv
 
 [gen_covid19japan_daily_summary_csv]
 action.logevent = 1
@@ -81,7 +81,7 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| eval _time=strptime(date, "%F")\
 	| table _time, updated, confirmed, confirmedAvg3d, confirmedAvg7d, confirmedCumulative, confirmedCumulativeAvg3d, confirmedCumulativeAvg7d, criticalCumulative, deceased, deceasedCumulative, recoveredCumulative, testedCumulative\
 	| addinfo\
-	| outputlookup output_format=splunk_mv_csv covid19japan_daily_summary.csv
+	| outputlookup output_format=splunk_mv_csv override_if_empty=false covid19japan_daily_summary.csv
 
 [gen_covid19japan_deceased_by_prefecture_summary_csv]
 action.logevent = 1
@@ -132,7 +132,7 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| streamstats current=true allnum=true global=false reset_on_change=true sum(daily_deceased) as cumulativeDeceased by name\
 	| addinfo\
 	\
-	| outputlookup output_format=splunk_mv_csv covid19japan_deceased_by_prefecture_summary.csv
+	| outputlookup output_format=splunk_mv_csv override_if_empty=false covid19japan_deceased_by_prefecture_summary.csv
 
 [gen_covid19japan_nhk_47newpatients_data_csv]
 display.visualizations.chartHeight = 826
@@ -167,7 +167,7 @@ search = index=covid19japan_nhk source="*/NHK-47newpatients-data.json"\
 	| eval updated=_time\
 	| eval _time=strptime("2020/" . mvindex(data,0), "%Y/%m/%d"), daily=mvindex(data,1)\
 	| xyseries _time, name, daily\
-	| outputlookup covid19japan_nhk_47newpatients_data.csv
+	| outputlookup override_if_empty=false covid19japan_nhk_47newpatients_data.csv
 
 [gen_covid19japan_nhk_47patients_data_csv]
 display.visualizations.chartHeight = 826
@@ -202,4 +202,4 @@ search = index=covid19japan_nhk source="*/NHK-47patients-data.json"\
 	| eval updated=_time\
 	| eval _time=strptime("2020/" . mvindex(data,0), "%Y/%m/%d"), daily=mvindex(data,1)\
 	| xyseries _time, name, daily\
-	| outputlookup covid19japan_nhk_47patients_data.csv
+	| outputlookup override_if_empty=false covid19japan_nhk_47patients_data.csv
