Alternative Dashborad 用の情報元に Chiba, Hokkaido, Saitama 等が追加されたことに対応。

--- a/covid19-japan/default/inputs.conf
+++ b/covid19-japan/default/inputs.conf
@@ -31,7 +31,7 @@ sourcetype = covid19japan_csv
 index = covid19japan
 
 [monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Chiba.csv]
-disabled = true
+disabled = false
 sourcetype = covid19japan_csv
 index = covid19japan
 
@@ -41,6 +41,16 @@ sourcetype = covid19japan_csv
 index = covid19japan
 
 [monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Osaka.csv]
+disabled = false
+sourcetype = covid19japan_csv
+index = covid19japan
+
+[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Hokkaido.csv]
+disabled = false
+sourcetype = covid19japan_csv
+index = covid19japan
+
+[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Saitama.csv]
 disabled = false
 sourcetype = covid19japan_csv
 index = covid19japan
