東洋経済オンラインのページをエミュレートする Dashboard を追加。

--- a/covid19-japan/default/transforms.conf
+++ b/covid19-japan/default/transforms.conf
@@ -2,25 +2,10 @@
 batch_index_query = 0
 case_sensitive_match = 0
 
-[aichidata]
-batch_index_query = 0
-case_sensitive_match = 0
-filename = Aichi.csv
-
 [capitaljapan]
 batch_index_query = 0
 case_sensitive_match = 0
 filename = CapitalJapan.csv
-
-[chibadata]
-batch_index_query = 0
-case_sensitive_match = 0
-filename = Chiba.csv
-
-[kanagawadata]
-batch_index_query = 0
-case_sensitive_match = 0
-filename = Kanagawa.csv
 
 [latlongjapan]
 batch_index_query = 0
@@ -32,10 +17,40 @@ case_sensitive_match = 0
 external_type = geo
 filename = NipponMap.kml
 
+[prefecturelist]
+batch_index_query = 0
+case_sensitive_match = 0
+filename = PrefecturesList.csv
+
+[prefectureslist]
+batch_index_query = 0
+case_sensitive_match = 0
+filename = PrefecturesList.csv
+
+[tokyodata]
+batch_index_query = 0
+case_sensitive_match = 0
+filename = Tokyo.csv
+
+[chibadata]
+batch_index_query = 0
+case_sensitive_match = 0
+filename = Chiba.csv
+
+[kanagawadata]
+batch_index_query = 0
+case_sensitive_match = 0
+filename = Kanagawa.csv
+
 [osakadata]
 batch_index_query = 0
 case_sensitive_match = 0
 filename = Osaka.csv
+
+[aichidata]
+batch_index_query = 0
+case_sensitive_match = 0
+filename = Aichi.csv
 
 [patientdata]
 batch_index_query = 0
@@ -46,16 +61,6 @@ filename = Patient_Data.csv
 batch_index_query = 0
 case_sensitive_match = 0
 filename = Prefecture_Data.csv
-
-[prefecturelist]
-batch_index_query = 0
-case_sensitive_match = 0
-filename = PrefecturesList.csv
-
-[tokyodata]
-batch_index_query = 0
-case_sensitive_match = 0
-filename = Tokyo.csv
 
 [nhkdata]
 batch_index_query = 0
