--- a/covid19-japan/default/inputs.conf
+++ b/covid19-japan/default/inputs.conf
@@ -1,14 +1,34 @@
 [default]
 
-[monitor:///var/local/COVID19/Japan/NHK-47newpatients-data.json]
-sourcetype = covid19japan_nhk_json
+[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Aichi.csv]
 disabled = false
-index = covid19japan_nhk
+index = covid19japan
+sourcetype = covid19japan_csv
 
-[monitor:///var/local/COVID19/Japan/NHK-47patients-data.json]
-sourcetype = covid19japan_nhk_json
+[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Chiba.csv]
+disabled = true
+index = covid19japan
+sourcetype = covid19japan_csv
+
+[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Kanagawa.csv]
 disabled = false
-index = covid19japan_nhk
+index = covid19japan
+sourcetype = covid19japan_csv
+
+[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Osaka.csv]
+disabled = false
+index = covid19japan
+sourcetype = covid19japan_csv
+
+[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Patient_Data.csv]
+disabled = false
+index = covid19japan
+sourcetype = covid19japan_csv
+
+[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Tokyo.csv]
+disabled = false
+index = covid19japan
+sourcetype = covid19japan_csv
 
 [monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-patient_data_latest.json]
 disabled = false
@@ -25,35 +45,15 @@ disabled = false
 index = covid19japan
 sourcetype = covid19japan_json
 
-[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Aichi.csv]
+[monitor:///var/local/COVID19/Japan/NHK-47newpatients-data.json]
 disabled = false
-sourcetype = covid19japan_csv
-index = covid19japan
+index = covid19japan_nhk
+sourcetype = covid19japan_nhk_json
 
-[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Chiba.csv]
-disabled = true
-sourcetype = covid19japan_csv
-index = covid19japan
-
-[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Kanagawa.csv]
+[monitor:///var/local/COVID19/Japan/NHK-47patients-data.json]
 disabled = false
-sourcetype = covid19japan_csv
-index = covid19japan
-
-[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Osaka.csv]
-disabled = false
-sourcetype = covid19japan_csv
-index = covid19japan
-
-[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Patient_Data.csv]
-disabled = false
-sourcetype = covid19japan_csv
-index = covid19japan
-
-[monitor:///var/local/COVID19/Japan/japan_covid_19_coronavirus_tracker-Tokyo.csv]
-disabled = false
-sourcetype = covid19japan_csv
-index = covid19japan
+index = covid19japan_nhk
+sourcetype = covid19japan_nhk_json
 
 [script://$SPLUNK_HOME/etc/apps/covid19-japan/bin/updateCovid19JapanCSV.sh]
 disabled = true
@@ -69,3 +69,8 @@ interval = 10 */2 * * *
 disabled = false
 sourcetype = updatecovid19japan
 interval = 30 1-23/2 * * *
+
+[script://$SPLUNK_HOME/etc/apps/covid19-japan/bin/updateCovid19Japan_ToyoKeizaiOnline_CSV.sh]
+disabled = false
+sourcetype = updatecovid19japan
+interval = 20 1-23/2 * * *
