東洋経済オンライン元データの CSV ヘッダ変更に対応。(県別テーブル)

--- a/covid19-japan/default/transforms.conf
+++ b/covid19-japan/default/transforms.conf
@@ -57,6 +57,11 @@ batch_index_query = 0
 case_sensitive_match = 0
 filename = Patient_Data.csv
 
+[populationjapan]
+batch_index_query = 0
+case_sensitive_match = 0
+filename = populationJapan.csv
+
 [prefecturedata]
 batch_index_query = 0
 case_sensitive_match = 0
