mvexpand を stats に置き換え

--- a/covid19-japan/default/savedsearches.conf
+++ b/covid19-japan/default/savedsearches.conf
@@ -11,7 +11,7 @@ alert.track = 0
 counttype = number of events
 display.page.search.tab = statistics
 enableSched = 1
-display.page.search.mode = verbose
+display.page.search.mode = fast
 dispatch.latest_time = now
 request.ui_dispatch_app = covid19-japan
 action.logevent.param.event = Empty in Generate covid19japan_confirmed_by_prefecture_summary.csv
@@ -24,10 +24,9 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| head 1\
 	| fields - daily*\
 	| spath output=prefectures prefectures{}\
-	| mvexpand prefectures\
+	| stats values(*) as * by prefectures\
 	| spath input=prefectures\
-	| fields updated, name, name_ja, newlyConfirmed, yesterdayConfirmed, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, dailyConfirmedStartDate,  dailyDeceasedStartDate, confirmedByCity.*, dailyConfirmedCount{}, dailyDeceasedCount{}, cruisePassenger\
-	\
+	| table updated, name, name_ja, newlyConfirmed, yesterdayConfirmed, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, dailyConfirmedStartDate,  dailyDeceasedStartDate, confirmedByCity.*, dailyConfirmedCount{}, dailyDeceasedCount{}, cruisePassenger\
 	\
 	| eval lc_min_time=strptime(dailyConfirmedStartDate,"%F")\
 	| eval days_confirmed_count=mvcount('dailyConfirmedCount{}')\
@@ -37,7 +36,8 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| fields - _raw\
 	\
 	| table _time, updated, name, name_ja, lc_min_time, dailyConfirmedStartDate, days_confirmed_count, daily_confirmed, newlyConfirmed, yesterdayConfirmed, confirmed, deceased, recovered, cruisePassenger, confirmedByCity.*\
-	| mvexpand daily_confirmed\
+	\
+	| stats values(*) as * by daily_confirmed, name\
 	| eval daily_confirmed=split(daily_confirmed, ",")\
 	| eval tmp=mvindex(daily_confirmed, 0), daily_confirmed=mvindex(daily_confirmed, 1)\
 	| eval _time=lc_min_time + (tmp*86400)\
@@ -47,7 +47,6 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| streamstats current=false window=1 allnum=true global=false reset_on_change=true sum(daily_confirmed) as yesterdayConfirmed by name\
 	| streamstats current=true allnum=true global=false reset_on_change=true sum(daily_confirmed) as cumulativeConfirmed by name\
 	| addinfo\
-	\
 	| outputlookup output_format=splunk_mv_csv override_if_empty=false covid19japan_confirmed_by_prefecture_summary.csv
 
 [gen_covid19japan_daily_summary_csv]
@@ -61,7 +60,7 @@ alert.track = 0
 counttype = number of events
 display.page.search.tab = statistics
 enableSched = 1
-display.page.search.mode = verbose
+display.page.search.mode = fast
 dispatch.latest_time = now
 request.ui_dispatch_app = covid19-japan
 action.logevent.param.event = Generate covid19japan_daily_summary.csv
@@ -73,11 +72,12 @@ quantity = 0
 search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary_latest.json" \
 	| head 1\
 	| spath output=daily daily{}\
-	| fields daily, updated\
-	| mvexpand daily\
+	| table daily, updated\
+	| stats values(*) as * by daily\
 	| spath input=daily\
 	| eval _time=strptime(date, "%F")\
 	| table _time, updated, confirmed, confirmedAvg3d, confirmedAvg7d, confirmedCumulative, confirmedCumulativeAvg3d, confirmedCumulativeAvg7d, criticalCumulative, deceased, deceasedCumulative, recoveredCumulative, testedCumulative\
+	| sort 0 + _time\
 	| addinfo\
 	| outputlookup output_format=splunk_mv_csv override_if_empty=false covid19japan_daily_summary.csv
 
@@ -92,7 +92,7 @@ alert.track = 0
 counttype = number of events
 display.page.search.tab = statistics
 enableSched = 1
-display.page.search.mode = verbose
+display.page.search.mode = fast
 dispatch.latest_time = now
 request.ui_dispatch_app = covid19-japan
 action.logevent.param.event = Empty in Generate covid19japan_deceased_by_prefecture_summary.csv
@@ -105,9 +105,9 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| head 1\
 	| fields - daily*\
 	| spath output=prefectures prefectures{}\
-	| mvexpand prefectures\
+	| stats values(*) as * by prefectures\
 	| spath input=prefectures\
-	| fields updated, name, name_ja, newlyConfirmed, yesterdayConfirmed, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, dailyConfirmedStartDate,  dailyDeceasedStartDate, confirmedByCity.*, dailyConfirmedCount{}, dailyDeceasedCount{}, cruisePassenger\
+	| table updated, name, name_ja, newlyConfirmed, yesterdayConfirmed, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, dailyConfirmedStartDate,  dailyDeceasedStartDate, confirmedByCity.*, dailyConfirmedCount{}, dailyDeceasedCount{}, cruisePassenger\
 	\
 	\
 	| eval ld_min_time=strptime(dailyDeceasedStartDate,"%F")\
@@ -118,7 +118,7 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| fields - _raw\
 	\
 	| table _time, updated, name, name_ja, ld_min_time, dailyDeceasedStartDate, days_deceased_count, daily_deceased, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, cruisePassenger, confirmedByCity.*\
-	| mvexpand daily_deceased\
+	| stats values(*) as * by daily_deceased, name \
 	| eval daily_deceased=split(daily_deceased, ",")\
 	| eval tmp=mvindex(daily_deceased, 0), daily_deceased=mvindex(daily_deceased, 1)\
 	| eval _time=ld_min_time + (tmp*86400)\
@@ -143,7 +143,7 @@ alert.track = 0
 counttype = number of events
 display.page.search.tab = statistics
 enableSched = 1
-display.page.search.mode = verbose
+display.page.search.mode = fast
 display.visualizations.type = singlevalue
 action.logevent.param.event = gen_covid19japan_nhk_47newpatients_data_csv
 display.visualizations.charting.chart = line
@@ -154,13 +154,16 @@ quantity = 0
 search = index=covid19japan_nhk source="*/NHK-47newpatients-data.json"\
 	| head 1\
 	| spath output=data47 data47{}\
-	| fields - name\
+	| fields - _raw\
+	| fields category{}, data47\
 	| mvexpand data47\
 	| spath input=data47\
 	| eval data=mvzip('category{}', 'data{}')\
-	| mvexpand data\
+	| fields - data47, category{}, data{}, _time\
+	| eval const=1\
+	| stats values(const) as const by data, name\
+	| fields - const\
 	| eval data=split(data, ",")\
-	| eval updated=_time\
 	| eval _time=strptime("2020/" . mvindex(data,0), "%Y/%m/%d"), daily=mvindex(data,1)\
 	| xyseries _time, name, daily\
 	| outputlookup override_if_empty=false covid19japan_nhk_47newpatients_data.csv
@@ -188,13 +191,16 @@ quantity = 0
 search = index=covid19japan_nhk source="*/NHK-47patients-data.json"\
 	| head 1\
 	| spath output=data47 data47{}\
-	| fields - name\
+	| fields - _raw\
+	| fields category{}, data47\
 	| mvexpand data47\
 	| spath input=data47\
 	| eval data=mvzip('category{}', 'data{}')\
-	| mvexpand data\
+	| fields - data47, category{}, data{}, _time\
+	| eval const=1\
+	| stats values(const) as const by data, name\
+	| fields - const\
 	| eval data=split(data, ",")\
-	| eval updated=_time\
 	| eval _time=strptime("2020/" . mvindex(data,0), "%Y/%m/%d"), daily=mvindex(data,1)\
 	| xyseries _time, name, daily\
 	| outputlookup override_if_empty=false covid19japan_nhk_47patients_data.csv
