Splunk の spath の動作不良に対応

--- a/covid19-japan/default/savedsearches.conf
+++ b/covid19-japan/default/savedsearches.conf
@@ -24,8 +24,10 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| head 1\
 	| fields - daily*\
 	| spath output=prefectures prefectures{}\
-	| stats values(*) as * by prefectures\
+	| mvexpand prefectures\
 	| spath input=prefectures\
+	| spath output=name input=prefectures name\
+	| spath output=name_ja input=prefectures name_ja\
 	| table updated, name, name_ja, newlyConfirmed, yesterdayConfirmed, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, dailyConfirmedStartDate,  dailyDeceasedStartDate, confirmedByCity.*, dailyConfirmedCount{}, dailyDeceasedCount{}, cruisePassenger\
 	\
 	| eval lc_min_time=strptime(dailyConfirmedStartDate,"%F")\
@@ -73,7 +75,7 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| head 1\
 	| spath output=daily daily{}\
 	| table daily, updated\
-	| stats values(*) as * by daily\
+	| mvexpand daily\
 	| spath input=daily\
 	| eval _time=strptime(date, "%F")\
 	| table _time, updated, confirmed, confirmedAvg3d, confirmedAvg7d, confirmedCumulative, confirmedCumulativeAvg3d, confirmedCumulativeAvg7d, criticalCumulative, deceased, deceasedCumulative, recoveredCumulative, testedCumulative\
@@ -105,8 +107,10 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| head 1\
 	| fields - daily*\
 	| spath output=prefectures prefectures{}\
-	| stats values(*) as * by prefectures\
+	| mvexpand prefectures\
 	| spath input=prefectures\
+	| spath output=name input=prefectures name\
+	| spath output=name_ja input=prefectures name_ja\
 	| table updated, name, name_ja, newlyConfirmed, yesterdayConfirmed, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, dailyConfirmedStartDate,  dailyDeceasedStartDate, confirmedByCity.*, dailyConfirmedCount{}, dailyDeceasedCount{}, cruisePassenger\
 	\
 	\
