--- a/covid19-japan/default/savedsearches.conf
+++ b/covid19-japan/default/savedsearches.conf
@@ -20,20 +20,32 @@ alert.expires = 60s
 display.general.type = statistics
 alert.suppress = 0
 quantity = 0
-search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary_latest.json" \
+search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary_latest.json"\
 	| head 1\
 	| fields - daily*\
 	| spath output=prefectures prefectures{}\
 	| mvexpand prefectures\
 	| spath input=prefectures\
-	| spath output=name input=prefectures name\
-	| spath output=name_ja input=prefectures name_ja\
-	| table updated, name, name_ja, newlyConfirmed, yesterdayConfirmed, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, dailyConfirmedStartDate,  dailyDeceasedStartDate, confirmedByCity.*, dailyConfirmedCount{}, dailyDeceasedCount{}, cruisePassenger\
+	| spath input=prefectures name\
+	| spath input=prefectures name_ja\
+	| spath input=prefectures newlyConfirmed\
+	| spath input=prefectures yesterdayConfirmed\
+	| spath input=prefectures newlyDeceased\
+	| spath input=prefectures yesterdayDeceased\
+	| spath input=prefectures confirmed\
+	| spath input=prefectures deceased\
+	| spath input=prefectures recovered\
+	| spath input=prefectures dailyDeceasedStartDate\
+	| spath input=prefectures dailyConfirmedStartDate\
+	| spath input=prefectures cruisePassenger\
+	| spath output=dailyConfirmedCount input=prefectures dailyConfirmedCount{}\
+	| spath output=dailyDeceasedCount input=prefectures dailyDeceasedCount{}\
+	| table updated, name, name_ja, newlyConfirmed, yesterdayConfirmed, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, dailyConfirmedStartDate,  dailyDeceasedStartDate, confirmedByCity.*, dailyConfirmedCount, dailyDeceasedCount, cruisePassenger\
 	\
 	| eval lc_min_time=strptime(dailyConfirmedStartDate,"%F")\
-	| eval days_confirmed_count=mvcount('dailyConfirmedCount{}')\
+	| eval days_confirmed_count=mvcount('dailyConfirmedCount')\
 	| eval tmp=mvrange(0, days_confirmed_count)\
-	| eval daily_confirmed=mvzip(tmp, 'dailyConfirmedCount{}')\
+	| eval daily_confirmed=mvzip(tmp, 'dailyConfirmedCount')\
 	\
 	| fields - _raw\
 	\
@@ -103,26 +115,37 @@ alert.expires = 60s
 display.general.type = statistics
 alert.suppress = 0
 quantity = 0
-search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary_latest.json" \
+search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary_latest.json"\
 	| head 1\
 	| fields - daily*\
 	| spath output=prefectures prefectures{}\
 	| mvexpand prefectures\
 	| spath input=prefectures\
-	| spath output=name input=prefectures name\
-	| spath output=name_ja input=prefectures name_ja\
-	| table updated, name, name_ja, newlyConfirmed, yesterdayConfirmed, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, dailyConfirmedStartDate,  dailyDeceasedStartDate, confirmedByCity.*, dailyConfirmedCount{}, dailyDeceasedCount{}, cruisePassenger\
-	\
+	| spath input=prefectures name\
+	| spath input=prefectures name_ja\
+	| spath input=prefectures newlyConfirmed\
+	| spath input=prefectures yesterdayConfirmed\
+	| spath input=prefectures newlyDeceased\
+	| spath input=prefectures yesterdayDeceased\
+	| spath input=prefectures confirmed\
+	| spath input=prefectures deceased\
+	| spath input=prefectures recovered\
+	| spath input=prefectures dailyDeceasedStartDate\
+	| spath input=prefectures dailyConfirmedStartDate\
+	| spath input=prefectures cruisePassenger\
+	| spath output=dailyConfirmedCount input=prefectures dailyConfirmedCount{}\
+	| spath output=dailyDeceasedCount input=prefectures dailyDeceasedCount{}\
+	| table updated, name, name_ja, newlyConfirmed, yesterdayConfirmed, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, dailyConfirmedStartDate,  dailyDeceasedStartDate, confirmedByCity.*, dailyConfirmedCount, dailyDeceasedCount, cruisePassenger\
 	\
 	| eval ld_min_time=strptime(dailyDeceasedStartDate,"%F")\
-	| eval days_deceased_count=mvcount('dailyDeceasedCount{}')\
+	| eval days_deceased_count=mvcount('dailyDeceasedCount')\
 	| eval tmp=mvrange(0, days_deceased_count)\
-	| eval daily_deceased=mvzip(tmp, 'dailyDeceasedCount{}')\
+	| eval daily_deceased=mvzip(tmp, 'dailyDeceasedCount')\
 	\
 	| fields - _raw\
 	\
 	| table _time, updated, name, name_ja, ld_min_time, dailyDeceasedStartDate, days_deceased_count, daily_deceased, newlyDeceased, yesterdayDeceased, confirmed, deceased, recovered, cruisePassenger, confirmedByCity.*\
-	| stats values(*) as * by daily_deceased, name \
+	| stats values(*) as * by daily_deceased, name\
 	| eval daily_deceased=split(daily_deceased, ",")\
 	| eval tmp=mvindex(daily_deceased, 0), daily_deceased=mvindex(daily_deceased, 1)\
 	| eval _time=ld_min_time + (tmp*86400)\
