--- a/covid19-japan/default/savedsearches.conf
+++ b/covid19-japan/default/savedsearches.conf
@@ -88,7 +88,18 @@ search = index=covid19japan source="*/japan_covid_19_coronavirus_tracker-summary
 	| spath output=daily daily{}\
 	| table daily, updated\
 	| mvexpand daily\
-	| spath input=daily\
+	| spath input=daily confirmed\
+	| spath input=daily confirmedAvg3d\
+	| spath input=daily confirmedAvg7d\
+	| spath input=daily confirmedCumulative\
+	| spath input=daily confirmedCumulativeAvg3d\
+	| spath input=daily confirmedCumulativeAvg7d\
+	| spath input=daily criticalCumulative\
+	| spath input=daily deceased\
+	| spath input=daily deceasedCumulative\
+	| spath input=daily recoveredCumulative\
+	| spath input=daily testedCumulative\
+	| spath input=daily date\
 	| eval _time=strptime(date, "%F")\
 	| table _time, updated, confirmed, confirmedAvg3d, confirmedAvg7d, confirmedCumulative, confirmedCumulativeAvg3d, confirmedCumulativeAvg7d, criticalCumulative, deceased, deceasedCumulative, recoveredCumulative, testedCumulative\
 	| sort 0 + _time\
